2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Services/GettextCatalog.cs: changed to use static methods.
	* Gui/Dialogs/CommonAboutDialog.cs: reflecting above change.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: Added GettextCatalog.cs
	* Services/GettextCatalog.cs: imported from muine, modified a bit.
	* Gui/Dialogs/CommonAboutDialog.cs: added gettext translatable title
	to test .cs translations.
	* Gui/Dialogs/OptionPanels/IDEOptions/LoadSavePanel.cs: modified to 
	test .glade translations 

2004-04-01  John Luke  <jluke@cfl.rr.com>
	
	* Internal/ExternalTool/ExternalTool.cs:
	store UseOutputPad in xml file

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/TipOfTheDay.cs: make same change here.

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Commands/AutostartCommands.cs: default to false for ShowToTD

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: fixing the string stuff.
	* Makefile.am: adding -codepage:utf8

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/CommonAboutDialog.cs: adding miguel :)

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/AbstractProject.cs: dont include *.swp, *~ or .* in
	search for new files. closes bug #56282.

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs: fix bug #56273, rename
	Projects tab to Combine.

2004-03-31  John Luke  <jluke@cfl.rr.com>

	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
	use stock buttons and put the MessageDialog in a using {}	

2004-03-30  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: stop using Gdk.Threads.Enter and
	.Leave, as they can cause deadlocks, using a GLib.IdleHandler instead.
	Closes bug #56260

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: partial fix to bug with double
	clicking not setting focus properly.

2004-03-29  Todd Berman  <tberman@sevenl.net>
