@@ -142,10 +142,10 @@ namespace MonoDevelop.Gui.Dialogs
 			//changelog = new ChangeLogTabPage ();
 			VersionInformationTabPage vinfo = new VersionInformationTabPage ();
 			
-			nb.AppendPage (new AboutMonoDevelopTabPage (), new Label ("About MonoDevelop"));
+			nb.AppendPage (new AboutMonoDevelopTabPage (), new Label (GettextCatalog.GetString ("About MonoDevelop")));
 			//nb.AppendPage (aatp, new Label ("Authors"));
 			//nb.AppendPage (changelog, new Label ("ChangeLog"));
-			nb.AppendPage (vinfo, new Label ("Version Info"));
+			nb.AppendPage (vinfo, new Label (GettextCatalog.GetString ("Version Info")));
 			this.VBox.PackStart (nb);
 			this.AddButton (Gtk.Stock.Close, (int) ResponseType.Close);
 			this.ShowAll ();
